--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": ">=5.4.0",
         "packaged/figlet": "dev-master",
-        "malenki/ansi": "1.2.6"
+        "malenki/ansi": "1.2.6",
+        "jakub-onderka/php-console-highlighter": "0.*"
     },
     "autoload": {
         "psr-0": { "ANSISlides": "src/" }
