--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.4.0",
         "packaged/figlet": "dev-master",
         "malenki/ansi": "1.2.6",
-        "jakub-onderka/php-console-highlighter": "0.*"
+        "jakub-onderka/php-console-highlighter": "0.*",
+        "symfony/console": "v2.4.4"
     },
     "autoload": {
         "psr-0": { "ANSISlides": "src/" }
